--- a/404.md
+++ b/404.md
@@ -3,4 +3,8 @@ title: Page Not Found
 permalink: /404.html
 ---
 
+# Page Not Found
+
 Could not find that page. [Go back home?](/)
+
+If a link leads here, then this page is WIP.
